# codex

./: .dockerignore  .gcloudignore  .gitignore  COMO_MCP_FUNCIONA_DE_VERDADE.md  FAST-BUILD-GUIDE.md  GATEWAY_API_EXAMPLES.md  GATEWAY_EXEC_ANALYSIS.md  GCP_DEPLOYMENT.md  GUIA_TESTES_WRAPPER.md  IMPLEMENTACAO_FINAL.md  OAUTH_SETUP.md  README-CLOUD-BUILD.md  RESULTADO_TESTE_MCP_PIPEDRIVE.md  check-logs.sh  cloudbuild-fast.yaml  cloudbuild.yaml  connect-github-simple.sh  create-anthropic-secret.sh  create-trigger.sh  fix-permissions.sh  fix-secrets-permissions.sh  force-redeploy.sh  setup-fast-builds.sh  test-bff-clean.sh  test-mcp-pipedrive-v2.sh  test-mcp-pipedrive-v3-simple.sh  test-mcp-pipedrive.sh  test-mcp-quick.sh  test-wrapper.sh
codex-rs/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.fast
codex-rs/app-server/src/: lib.rs  message_processor.rs
codex-rs/cloud-cli/: CLOUD_CLI_DEPLOY.md  Cargo.toml
codex-rs/cloud-cli/src/: cloud_client.rs  lib.rs  main.rs
codex-rs/common/: Cargo.toml
codex-rs/common/src/: lib.rs
codex-rs/gateway/: .dockerignore  .env.example  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  commad.md  docker-compose.yml  hello_world.sh
codex-rs/gateway/config/: config.toml
codex-rs/gateway/src/: config.rs  error.rs  lib.rs  main.rs  router.rs  state.rs
codex-rs/gateway/src/handlers/: exec.rs  health.rs  jsonrpc.rs  mod.rs  oauth.rs  webhook.rs  websocket.rs
codex-rs/gateway/src/middleware/: api_key.rs  mod.rs
codex-rs/gateway/src/services/: codex_service.rs  codex_service.rs.bak  mod.rs
codex-rs/gateway/tests/: exec_endpoint_test.rs  execute_prompt_test.rs  websocket_exec_test.rs
codex-rs/wrapper-cloud-run/: .gcloudignore  CLOUD_SQL_SETUP.md  DEPLOY_SUMMARY.md  Dockerfile  MCP_INTEGRATION.md  MCP_SESSION_EXAMPLE.md  config.toml  deploy-manual.sh  setup-cloudsql.sh
codex-rs/wrapper-cloud-run/core/src/: config_types.rs  mcp_connection_manager.rs
codex-rs/wrapper-cloud-run/rmcp-client/src/: rmcp_client.rs
codex-rs/wrapper-cloud-run/src/: auth.rs  main.rs  process.rs  types.rs
deploy/: cloud-run-service.yaml
docs/: gateway-exec-api.md
scripts/: README_CLI.md  create_build_trigger.sh  deploy.sh  deploy_oauth_gateway.sh  fix_cloudbuild_permissions.sh  fix_permissions_cloudshell.sh  gateway  gateway_cli.py  test_gateway.sh  test_oauth.sh
terraform/: README.md  main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars.example  variables.tf
(+5 files in other folders)
