[package]
edition.workspace = true
name = "codex-gateway"
version.workspace = true

[dependencies]
# External dependencies
anyhow = { workspace = true }
axum = { workspace = true, features = [
    "http1",
    "http2",
    "tokio",
    "json",
    "ws",
    "macros",
] }
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tower = { workspace = true }
tower-http = { workspace = true, features = [
    "cors",
    "trace",
    "timeout",
    "limit",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }

# Internal dependencies
codex-app-server = { workspace = true }
codex-app-server-protocol = { workspace = true }
codex-common = { workspace = true, features = ["cli"] }
codex-core = { workspace = true }
codex-exec = { workspace = true }
codex-protocol = { workspace = true }
mcp-types = { workspace = true }

[dev-dependencies]
tokio-tungstenite = "0.21"

[lints]
workspace = true
